--- a/kernel/os/syscfg.yml
+++ b/kernel/os/syscfg.yml
@@ -48,6 +48,9 @@ syscfg.defs:
     OS_SYSVIEW:
         description: 'Enable OS sysview tracing'
         value: 0
+    OS_TASK_STATS:
+        description: 'Enable task stats tracing'
+        value: 0
     OS_SCHEDULING:
         description: 'Whether OS will be started or not'
         value: 1
